Fix the history button z-index #12 #13

--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -219,3 +219,7 @@ mat-grid-tile mat-card {
 .machineName {
   white-space: nowrap;
 }
+
+mat-select {
+  font-size: 94%;
+}
