--- a/client/src/theme.scss
+++ b/client/src/theme.scss
@@ -12,8 +12,8 @@ $light-primary: mat-palette($mat-blue-grey, 300); // 500 is the base hue of a Ma
  // See: https://material.io/design/color/dark-theme.html
 $dark-primary: mat-palette($mat-blue-grey, 200);
 
-$light-accent: mat-palette($mat-blue-grey, A200);
-$dark-accent: mat-palette($mat-blue-grey, A100);
+$light-accent: mat-palette($mat-blue-grey, A300);
+$dark-accent: mat-palette($mat-blue-grey, A200);
 
 // The warn palette is optional (defaults to red).
 $light-warn: mat-palette($mat-purple, 300); // Without a hue given, it defaults to 500
